# AIReviewBackend

./: .dockerignore  .example.env  .gitignore  .hard-local.env  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  hard-local.docker-compose.yml  prod.Dockerfile  prod.docker-compose.yml  pyproject.toml  readme.md  system.md
.github/workflows/: docker-publish.yml  test.yml
ai_review/criteria/: idea.md  security.md
ai_review/criteria/auto_generation/: final.json  prompt.md
ai_review/criteria/main/: readme.md
ai_review/prompts/feedback/: system.tpl  user.tpl
alembic/: env.py
alembic/versions/: 2026_04_03_1525-2469dc2ae1f3_users.py  2026_04_04_2243-6d610430c104_workspaces.py  2026_04_09_2301-c408da00194e_criteria_solutions_tasks.py  2026_04_14_0954-a1c01bdb5d1e_pipeline_tasks.py  2026_04_15_1947-431f09e6a7cf_transactions.py  2026_04_21_0306-4283d95c7d1f_criteria_workspace_task_binding.py  2026_04_22_0345-2bd15d841784_solution_repo_artifact_path.py  2026_04_27_1018-a9162cfeba21_criteria.py  2026_04_28_0916-a2d9af224e86_custom_models.py  2026_05_04_0426-180ef8456baa_solution.py
docs/: development.md
docs/architecture/: ai.md  architecture.md  cjm.md  data_model.md  deployment.md
docs/diploma/: key.md  plan.md  recomendation.md  requirements.md  tasks.md
docs/diploma/prompts/: editor.md  writer.md
docs/diploma/text/: 02_introduction.md  03_domain_analysis.md  07_ai_usage.md  important.md  not_used.md
docs/ui/: plan.md
docs/usecases/: auth.md  profile.md  review.md  solutions.md  tasks.md  workspaces.md
examples/project_docs/aith-courses/: critic_doc_1.md  critic_doc_2.md  final_project_doc.md  project_content.md  project_doc.md  resolve_doc.md
examples/project_docs/avito-price-prediction/: critic_doc_1.md  critic_doc_2.md  critic_doc_3.md  final_project_doc.md  project_content.md  project_doc.md  project_tree.md  resolve_doc.md
extra/criteria/: configuration.md  fastapi.md  observability.md  rest.md  task_specific.md
extra/logging/: grafana-datasources.yml  loki-config.yml
extra/nginx/: hard-local.conf
extra/redis/: redis.conf
reserach/: 01_load_repo.py  02_call_llm.py  03_evaluate.py  constants.py  dataset.csv  log.csv  schemas.py  settings.py  utils.py
reserach/answers/1/: deepseek-chat-v3.1.json  devstral-small.json  gemini-3-flash-preview.json  glm-4.7-flash.json  gpt-5-nano.json  gpt-oss-120b.json  grok-4.1-fast.json  kimi-k2.5.json  mimo-v2-flash.json  minimax-m2.7.json  qwen3-30b-a3b-instruct-2507.json  qwen3-coder.json
reserach/answers/2/: deepseek-chat-v3.1.json  devstral-small.json  gemini-3-flash-preview.json  glm-4.7-flash.json  gpt-5-nano.json  gpt-oss-120b.json  grok-4.1-fast.json  kimi-k2.5.json  mimo-v2-flash.json  minimax-m2.7.json  qwen3-30b-a3b-instruct-2507.json  qwen3-coder.json
reserach/answers/3/: deepseek-chat-v3.1.json  devstral-small.json  gemini-3-flash-preview.json  glm-4.7-flash.json  gpt-5-nano.json  gpt-oss-120b.json  grok-4.1-fast.json  kimi-k2.5.json  mimo-v2-flash.json  minimax-m2.7.json  qwen3-30b-a3b-instruct-2507.json  qwen3-coder.json
reserach/data/1/: criteria.json  reference.json
reserach/data/2/: criteria.json  reference.json
reserach/data/3/: criteria.json  reference.json
reserach/scripts/: 01_load_repo.py  02_call_llm.py  03_evaluate.py
scripts/: gen_env.sh
src/application/: exceptions.py
src/application/ai_review/: criteria_grading.py  feedback.py  pipeline.py  preprocessing.py  project_doc.py  task_graph.py
src/application/auth/: auth.py  register.py
src/application/criteria/: __init__.py  criteria.py  utils.py
src/application/custom_models/: __init__.py  custom_models.py  utils.py
src/application/health/: health.py
src/application/solutions/: __init__.py  common.py  review_by_criteria.py  score.py  solution_criteria_checks.py  solutions.py  utils.py  wind_rose.py
src/application/tasks/: __init__.py  task_criteria.py  tasks.py
src/application/transactions/: transactions.py  utils.py
src/application/users/: __init__.py  users.py
src/application/workspaces/: __init__.py  common.py  grades_export.py  join_rules.py  members.py  workspaces.py
src/constants/: ai_pipeline.py  ai_review.py  emails.py  preprocessing.py  transactions.py  workspaces.py
src/di/: container.py
src/dto/: common.py
src/dto/ai_review/: criteria.py  message.py  pipeline.py
src/dto/app/: app.py
src/dto/auth/: __init__.py  auth.py  register.py  token.py
src/dto/criteria/: __init__.py  criteria.py
src/dto/custom_models/: __init__.py  custom_models.py
src/dto/emails/: emails.py
src/dto/solutions/: human_grading.py  score.py  solution_criteria_checks.py  solutions.py  wind_rose.py
src/dto/tasks/: __init__.py  task_criteria.py  tasks.py
src/dto/transactions/: __init__.py  metadata.py  transactions.py
src/dto/users/: __init__.py  user.py
src/dto/workspaces/: __init__.py  join.py  join_rule.py  member.py  student_grades.py  workspace.py
src/email_templates/register_confirm/: subject.txt  template.html  template.txt
src/infrastructure/: config.py  database.py
src/infrastructure/auth/: __init__.py  code.py  jwt.py  password.py
src/infrastructure/dao/: __init__.py
src/infrastructure/di/: container.py
src/infrastructure/email_sender/: disabled.py  interface.py  maileroo.py  smtp.py
src/infrastructure/email_templater/: interface.py  jinja2.py
src/infrastructure/encryptor/: fernet.py  interface.py
src/infrastructure/llm/: base.py  file_writer.py  openai_like.py
src/infrastructure/logging/: __init__.py  config.py  format.py
src/infrastructure/logs_sender/: init_logs_sender.py  loki.py
src/infrastructure/rate_limiter/: rate_limiter.py
src/infrastructure/storage/: s3.py  (+2 more)
src/settings/: __init__.py  ai.py  auth.py  database.py  emails.py  jwt.py  logging.py  redis.py  security.py  solutions.py  storage.py
tests/: conftest.py
tests/factories/: criteria.py  custom_models.py  solutions.py  tasks.py  transactions.py  users.py  workspaces.py
tests/helpers/: criteria.py  custom_models.py  solutions.py  tasks.py  transactions.py  users.py  workspaces.py
(+181 files in other folders)
